src/tests/snapshots/cclv__tests__acceptance_scroll__scroll_down_j_key_3x.snap
---
source: src/tests/acceptance_scroll.rs
expression: scrolled_output
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main Agent                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main Agent [Opus] (20 entries)────────────────────────────────────────────────┐
││                                                                             │
││    1. I'm a coordinator agent that CANNOT read/write code directly          │
││    (+10 more lines)                                                         │
│── 9 in / 1 out / $0.06 | Context: 37.4k (18%) ──                             │
││  4 I'll start by loading the required skill and then following the coordinat│
││    or protocol.                                                             │
│── 9 in / 1 out / $0.06 | Context: 74.9k (37%) ──                             │
││  5 🔧' Tool: Skill                                                           │
││      {                                                                      │
││        "skill": "efficient-subagent-orchestration"                          │
││      }                                                                      │
│── 9 in / 1 out / $0.06 | Context: 112.3k (56%) ──                            │
││  6 🔧  Tool: Skill                                                           │
││      {                                                                      │
││        "skill": "beads-project-tracking"                                    │
││      }                                                                      │
│── 9 in / 1 out / $0.06 | Context: 149.7k (74%) ──                            │
││  7 Launching skill: efficient-subagent-orchestration                        │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
